added author detals

--- a/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.tex
+++ b/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.tex
@@ -189,7 +189,8 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Causal Effects of Religious Service Attendance on Charity and Volunteering: Evidence Using Novel Measures From A National Longitudinal Panel},
-  pdfauthor={authors blinded},
+  pdfauthor={Joseph A. Bulbulia; Don E Davis; Kenneth G. Rice; Chris G. Sibley; Geoffrey Troughton},
+  pdfkeywords={Use, use},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
@@ -204,8 +205,47 @@ Panel}
 \usepackage{academicons}
 \usepackage{xcolor}
 
-  \author{authors blinded}
-  
+  \author{Joseph A. Bulbulia}
+            \affil{%
+             \small{     Victoria University of Wellington, New Zealand
+          ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0002-5861-2056 }
+              }
+      \usepackage{academicons}
+\usepackage{xcolor}
+
+  \author{Don E Davis}
+            \affil{%
+             \small{     Georgia State University, Matheny Center for
+the Study of Stress, Trauma, and Resilience
+          ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0003-3169-6576 }
+              }
+      \usepackage{academicons}
+\usepackage{xcolor}
+
+  \author{Kenneth G. Rice}
+            \affil{%
+             \small{     Georgia State University, Matheny Center for
+the Study of Stress, Trauma, and Resilience
+          ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0002-0558-2818 }
+              }
+      \usepackage{academicons}
+\usepackage{xcolor}
+
+  \author{Chris G. Sibley}
+            \affil{%
+             \small{     School of Psychology, University of Auckland
+          ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0002-4064-8800 }
+              }
+      \usepackage{academicons}
+\usepackage{xcolor}
+
+  \author{Geoffrey Troughton}
+            \affil{%
+             \small{     School of Social and Cultural Studies, Victoria
+University of Wellington
+          ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0001-7423-0640 }
+              }
+      
 
 
 \date{2024-04-22}
@@ -235,8 +275,8 @@ for answering them in the scientific study of cultural practices.
 \textbf{KEYWORDS}: \emph{Causal Inference}; \emph{Charity};
 \emph{Church}; \emph{Cooperation}; \emph{Cross-validation};
 \emph{Longitudinal}; \emph{Machine Learning}; \emph{Religion};
-\emph{Semi-parametric}; \emph{Targeted Learning}; \emph{TMLE};
-\emph{Volunteering}.
+\emph{Semi-parametric}; SWIGs\emph{; }Targeted Learning\emph{;
+}TMLE\emph{; }Volunteering*.
 \end{abstract}
 
 \subsection{Introduction}\label{introduction}
@@ -861,7 +901,7 @@ practice across society.
 
 \centering{
 
-\includegraphics{24_no_name_lmtp_coop_church_files/figure-pdf/fig-hist-1.pdf}
+\includegraphics{24_bulbulia_lmtp_coop_church_files/figure-pdf/fig-hist-1.pdf}
 
 }
 
@@ -1133,7 +1173,7 @@ volunteering minutes compared with the status quo.}
 
 \centering{
 
-\includegraphics{24_no_name_lmtp_coop_church_files/figure-pdf/fig-1_1-1.pdf}
+\includegraphics{24_bulbulia_lmtp_coop_church_files/figure-pdf/fig-1_1-1.pdf}
 
 }
 
@@ -1363,7 +1403,7 @@ overturn it. We infer \textbf{evidence for causality}.
 
 \centering{
 
-\includegraphics{24_no_name_lmtp_coop_church_files/figure-pdf/fig-study2-1.pdf}
+\includegraphics{24_bulbulia_lmtp_coop_church_files/figure-pdf/fig-study2-1.pdf}
 
 }
 
@@ -1593,7 +1633,7 @@ causality is not reliable}.
 
 \centering{
 
-\includegraphics{24_no_name_lmtp_coop_church_files/figure-pdf/fig-study_3-1.pdf}
+\includegraphics{24_bulbulia_lmtp_coop_church_files/figure-pdf/fig-study_3-1.pdf}
 
 }
 
@@ -2003,19 +2043,35 @@ interaction, and causal mediation}.
 
 \subsubsection{Ethics}\label{ethics}
 
-\{\textbf{authors blinded}\}
+The University of Auckland Human Participants Ethics Committee reviews
+the NZAVS every three years. Our most recent ethics approval statement
+is as follows: The New Zealand Attitudes and Values Study was approved
+by the University of Auckland Human Participants Ethics Committee on
+26/05/2021 for six years until 26/05/2027, Reference Number UAHPEC22576.
 
 \subsubsection{Data Availability}\label{data-availability}
 
-\{\textbf{authors blinded}\}
+The data described in the paper are part of the New Zealand Attitudes
+and Values Study. Members of the NZAVS management team and research
+group hold full copies of the NZAVS data. A de-identified dataset
+containing only the variables analysed in this manuscript is available
+upon request from the corresponding author or any member of the NZAVS
+advisory board for replication or checking of any published study using
+NZAVS data. The code for the analysis can be found at:
+\url{https://github.com/go-bayes/models/blob/main/scripts/24-bulbulia-church-prosocial.R}.
 
 \subsubsection{Acknowledgements}\label{acknowledgements}
 
-\{\textbf{authors blinded}\}
+The New Zealand Attitudes and Values Study is supported by a grant from
+the Templeton Religious Trust (TRT0196; TRT0418). JB received support
+from the Max Planck Institute for the Science of Human History. The
+funders had no role in preparing the manuscript or deciding to publish
+it.
 
 \subsubsection{Author Statement}\label{author-statement}
 
-\{\textbf{authors blinded}\}
+JB conceived the study and approach. CS led NZAVS data collection. All
+authors contributed to the manuscript.
 
 \newpage{}
 
@@ -2809,7 +2865,7 @@ effect). See VanderWeele \emph{et al.}
 
 \centering{
 
-\includegraphics{24_no_name_lmtp_coop_church_files/figure-pdf/fig-match_1-1.pdf}
+\includegraphics{24_bulbulia_lmtp_coop_church_files/figure-pdf/fig-match_1-1.pdf}
 
 }
 
