--- a/manuscripts/24-lmtp-coop-church/24_no_name_lmtp_coop_church.qmd
+++ b/manuscripts/24-lmtp-coop-church/24_no_name_lmtp_coop_church.qmd
@@ -1,17 +1,10 @@
 ---
 title: "Causal Effects of Religious Service Attendance on Charity and Volunteering: Evidence Using Novel Measures From A National Longitudinal Panel"
 abstract: |
-   Causal investigations for the effects of religion on prosociality must be precise. One should articulate a specific causal contrast for a feature of religion, select appropriate prosociality measures, define the target population, gather time-series data, and, only after identification assumptions are met, conduct statistical and sensitivity analyses. Here, we examine three distinct interventions on religious service attendance (increase, decrease, maintain) in a longitudinal sample of 33,198 New Zealanders (years 2018 to 2021). Study 1 investigates effects of religious service on charitable contributions and volunteerism. Studies 2 and 3 investigate effects of religious service on the relative risks of *receiving* aid or financial support from others during the past week -- measures designed to minimise self-reporting bias. Across all studies, inferred causal effects are substantially less pronounced than observed cross-sectional associations. Nonetheless, regular attendance across the population would enhance charitable donations by 4% of the New Zealand Government's annual spending. This research underscores the essential role of formulating precise causal questions and recommends a workflow for answering them in the scientific study of cultural practices.
-keywords:
-  - Causal Inference
-  - Charity
-  - Church
-  - Cooperation
-  - Cross-validation
-  - Machine Learning
-  - Nonparametric 
-  - Religion
-  - Volunteering
+   Causal investigations for the effects of religion on prosociality must be precise. One should articulate a specific causal contrast for a feature of religion, select appropriate prosociality measures, define the target population, gather time-series data, and, only after identification assumptions are met, conduct statistical and sensitivity analyses. Here, we examine three distinct interventions on religious service attendance (increase, decrease, maintain) in a longitudinal sample of 33,198 New Zealanders (years 2018 to 2021). Study 1 investigates the effects of religious service on charitable contributions and volunteerism. Studies 2 and 3 investigate the effects of religious service on the relative risks of *receiving* aid or financial support from others during the past week -- measures designed to minimise self-reporting bias. Across all studies, inferred causal effects are substantially less pronounced than observed cross-sectional associations. Nonetheless, regular attendance across the population would enhance charitable donations by 4% of the New Zealand Government's annual spending. This research underscores the essential role of formulating precise causal questions and recommends a workflow for answering them in the scientific study of cultural practices. 
+   
+   **KEYWORDS**: *Causal Inference*; *Charity*; *Church*; *Cooperation*; *Cross-validation*; *Longitudinal*; *Machine Learning*; *Religion*;  *Semi-parametric*; *Targeted Learning*; *TMLE*; *Volunteering*.
+author: authors blinded
 editor_options: 
   chunk_output_type: console
 format:
@@ -26,8 +19,15 @@ format:
     lot: false
     geometry:
       - top=30mm
-      - left=20mm
+      - left=25mm
       - heightrounded
+      - headsep=22pt
+      - headheight=11pt
+      - footskip=33pt
+      - ignorehead
+      - ignorefoot
+    template-partials: 
+      - /Users/joseph/GIT/templates/quarto/title.tex
     header-includes:
       - \input{/Users/joseph/GIT/latex/latex-for-quarto.tex}
 date: last-modified
@@ -65,11 +65,6 @@ push_mods <-  fs::path_expand(
 
 # WARNING:  COMMENT THIS OUT. JB DOES THIS FOR WORKING WITHOUT WIFI
 #source("/Users/joseph/GIT/templates/functions/libs2.R")
-
-library(margot)
-library(ggplot2)
-library(tidyverse)
-library(gtsummary)
 # # WARNING:  COMMENT THIS OUT. JB DOES THIS FOR WORKING WITHOUT WIFI
 # source("/Users/joseph/GIT/templates/functions/funs.R")
 
@@ -1437,7 +1432,7 @@ Moreover, a global panel studies suited for researching religion @johnson2022glo
 
 Also encouraging, well-designed panel studies investigating the causal effects of religious service attendance on health that capitalise on the affordances of time-series data provide models for studies that may investigate the social consequences of religion (refer to @chen2020religious, @pawlikowski2019religious,@vanderweelechurchmortality,@vanderweele2021effectsReligiousServiceMetanalysis, @kim2019mediators). At present, then, the intellectual benefits of retooling would seem considerable (refer to @major2023exploring). 
 
-Setting intellectual benefits aside, it is vital to remember that investigators should be able to evaluate the practical interest of their findings coherently. Such evaluation relies on quantifying the effects of interventions. However, associational methods cannot deliver this understanding where causal inferential workflows are absent because association is not guaranteed to be causation [@westreich2013]. What might be called a *practical significance gap* arises from associational models because we cannot interpret associations as causation unless we have obtained balance on the treatments to be compared, know that causes in our data precede effects in time, and ensure that identification conditions have been met. Notably, the *practical significance gap* remains for associational methods even when they are applied to time series data, and even when they are sophisticated—as in the statistical structural equation and multilevel modelling traditions (refer to @vanderweele2021can; @hazlett2022understanding). Yet, because investigators typically seek both scientific knowledge and practical understanding, **we strongly recommend the broader adoption of causal inferential methods in the psychological sciences.**
+Setting intellectual benefits aside, it is vital to remember that investigators should be able to evaluate the practical interest of their findings coherently. Such evaluation relies on quantifying the effects of interventions. However, associational methods cannot deliver this understanding where causal inferential workflows are absent because association is not guaranteed to be causation [@westreich2013]. What might be called a **practical significance gap** arises from associational models because we cannot interpret associations as causation unless we have obtained balance on the treatments to be compared, know that causes in our data precede effects in time, and ensure that identification conditions have been met. Notably, the **practical significance gap remains for associational methods even when they are applied to time series data,** and even when the associational methods are sophisticated — as in the statistical structural equation and multilevel modelling traditions (refer to @vanderweele2021can; @hazlett2022understanding). Yet, because investigators typically seek both scientific knowledge and practical understanding, **we strongly recommend the broader adoption of causal inferential methods in the psychological sciences.**
 
 
 Fifth, and finally, we frame this study's contribution in light of future horizons. This study combined robust causal methods with national panel data to quantitatively investigate the social consequences of religious behaviour. Using both stated and revealed indicators, we provide evidence that religious service attendance causally affects charitable donations and volunteering. These findings offer insights into *how much* Religious service affects charity and volunteering in New Zealand and possibly in similar cultures. We hope this research will serve as a guide for studies in other settings. 
@@ -1449,29 +1444,21 @@ However, even within New Zealand, much remains to be discovered. We have not att
 
 ### Ethics
 
-<!-- The University of Auckland Human Participants Ethics Committee reviews the NZAVS every three years. Our most recent ethics approval statement is as follows: The New Zealand Attitudes and Values Study was approved by the University of Auckland Human Participants Ethics Committee on 26/05/2021 for six years until 26/05/2027, Reference Number UAHPEC22576. -->
-
- (*blinded) 
+ {**authors blinded**} 
 
 ### Data Availability
 
- (*blinded) 
- 
-<!-- The data described in the paper are part of the New Zealand Attitudes and Values Study (NZAVMembers of the NZAVS management team and research group hold full copies of the NZAVS data. A de-identified dataset containing only the variables analysed in this manuscript is available upon request from the corresponding author or any member of the NZAVS advisory board for replication or checking of any published study using NZAVS data. The code for the analysis can be found at: [https://github.com/go-bayes/models/blob/main/scripts/24-bulbulia-church-prosocial.R](https://github.com/go-bayes/models/blob/main/scripts/24-bulbulia-church-prosocial.R).  -->
+{**authors blinded**} 
 
 
 ### Acknowledgements
 
- (*blinded) 
-
-<!-- The New Zealand Attitudes and Values Study is supported by a grant from the Templeton Religious Trust (TRT0196; TRT0418). JB received support from the Max Planck Institute for the Science of Human History. The funders had no role in preparing the manuscript or deciding to publish it. -->
+ {**authors blinded**} 
 
 
 ### Author Statement
 
- (*blinded) 
-
-<!-- JB conceived the study and approach. CS led NZAVS data collection. All authors contributed to the manuscript. -->
+ {**authors blinded**} 
 
 
 {{< pagebreak >}}
