--- a/manuscripts/24-lmtp-coop-church/old/24_no_name_lmtp_coop_church.tex
+++ b/manuscripts/24-lmtp-coop-church/old/24_no_name_lmtp_coop_church.tex
@@ -38,32 +38,18 @@
   \KOMAoptions{parskip=half}}
 \makeatother
 \usepackage{xcolor}
-\usepackage[top=30mm,left=25mm,heightrounded,headsep=22pt,headheight=11pt,footskip=33pt,ignorehead,ignorefoot]{geometry}
+\usepackage[top=30mm,left=20mm,heightrounded]{geometry}
 \setlength{\emergencystretch}{3em} % prevent overfull lines
 \setcounter{secnumdepth}{-\maxdimen} % remove section numbering
 % Make \paragraph and \subparagraph free-standing
-\makeatletter
 \ifx\paragraph\undefined\else
   \let\oldparagraph\paragraph
-  \renewcommand{\paragraph}{
-    \@ifstar
-      \xxxParagraphStar
-      \xxxParagraphNoStar
-  }
-  \newcommand{\xxxParagraphStar}[1]{\oldparagraph*{#1}\mbox{}}
-  \newcommand{\xxxParagraphNoStar}[1]{\oldparagraph{#1}\mbox{}}
+  \renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
 \fi
 \ifx\subparagraph\undefined\else
   \let\oldsubparagraph\subparagraph
-  \renewcommand{\subparagraph}{
-    \@ifstar
-      \xxxSubParagraphStar
-      \xxxSubParagraphNoStar
-  }
-  \newcommand{\xxxSubParagraphStar}[1]{\oldsubparagraph*{#1}\mbox{}}
-  \newcommand{\xxxSubParagraphNoStar}[1]{\oldsubparagraph{#1}\mbox{}}
+  \renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
 \fi
-\makeatother
 
 
 \providecommand{\tightlist}{%
@@ -189,7 +175,9 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Causal Effects of Religious Service Attendance on Charity and Volunteering: Evidence Using Novel Measures From A National Longitudinal Panel},
-  pdfauthor={authors blinded},
+  pdfkeywords={Causal
+Inference, Charity, Church, Cooperation, Cross-validation, Machine
+Learning, Nonparametric, Religion, Volunteering},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
@@ -200,15 +188,9 @@
 \title{Causal Effects of Religious Service Attendance on Charity and
 Volunteering: Evidence Using Novel Measures From A National Longitudinal
 Panel}
+\author{}
+\date{2024-04-21}
 
-\usepackage{academicons}
-\usepackage{xcolor}
-
-  \author{authors blinded}
-  
-
-
-\date{2024-04-22}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -220,23 +202,17 @@ identification assumptions are met, conduct statistical and sensitivity
 analyses. Here, we examine three distinct interventions on religious
 service attendance (increase, decrease, maintain) in a longitudinal
 sample of 33,198 New Zealanders (years 2018 to 2021). Study 1
-investigates the effects of religious service on charitable
-contributions and volunteerism. Studies 2 and 3 investigate the effects
-of religious service on the relative risks of \emph{receiving} aid or
-financial support from others during the past week -- measures designed
-to minimise self-reporting bias. Across all studies, inferred causal
+investigates effects of religious service on charitable contributions
+and volunteerism. Studies 2 and 3 investigate effects of religious
+service on the relative risks of \emph{receiving} aid or financial
+support from others during the past week -- measures designed to
+minimise self-reporting bias. Across all studies, inferred causal
 effects are substantially less pronounced than observed cross-sectional
 associations. Nonetheless, regular attendance across the population
 would enhance charitable donations by 4\% of the New Zealand
 Government's annual spending. This research underscores the essential
 role of formulating precise causal questions and recommends a workflow
 for answering them in the scientific study of cultural practices.
-
-\textbf{KEYWORDS}: \emph{Causal Inference}; \emph{Charity};
-\emph{Church}; \emph{Cooperation}; \emph{Cross-validation};
-\emph{Longitudinal}; \emph{Machine Learning}; \emph{Religion};
-\emph{Semi-parametric}; \emph{Targeted Learning}; \emph{TMLE};
-\emph{Volunteering}.
 \end{abstract}
 
 \subsection{Introduction}\label{introduction}
@@ -1950,20 +1926,19 @@ of interventions. However, associational methods cannot deliver this
 understanding where causal inferential workflows are absent because
 association is not guaranteed to be causation
 (\citeproc{ref-westreich2013}{Westreich and Greenland 2013}). What might
-be called a \textbf{practical significance gap} arises from
-associational models because we cannot interpret associations as
-causation unless we have obtained balance on the treatments to be
-compared, know that causes in our data precede effects in time, and
-ensure that identification conditions have been met. Notably, the
-\textbf{practical significance gap remains for associational methods
-even when they are applied to time series data,} and even when the
-associational methods are sophisticated --- as in the statistical
-structural equation and multilevel modelling traditions (refer to
-VanderWeele (\citeproc{ref-vanderweele2021can}{2021a}); Hazlett and
-Wainstein (\citeproc{ref-hazlett2022understanding}{2022})). Yet, because
-investigators typically seek both scientific knowledge and practical
-understanding, \textbf{we strongly recommend the broader adoption of
-causal inferential methods in the psychological sciences.}
+be called a \emph{practical significance gap} arises from associational
+models because we cannot interpret associations as causation unless we
+have obtained balance on the treatments to be compared, know that causes
+in our data precede effects in time, and ensure that identification
+conditions have been met. Notably, the \emph{practical significance gap}
+remains for associational methods even when they are applied to time
+series data, and even when they are sophisticated---as in the
+statistical structural equation and multilevel modelling traditions
+(refer to VanderWeele (\citeproc{ref-vanderweele2021can}{2021a});
+Hazlett and Wainstein (\citeproc{ref-hazlett2022understanding}{2022})).
+Yet, because investigators typically seek both scientific knowledge and
+practical understanding, \textbf{we strongly recommend the broader
+adoption of causal inferential methods in the psychological sciences.}
 
 Fifth, and finally, we frame this study's contribution in light of
 future horizons. This study combined robust causal methods with national
@@ -2003,19 +1978,19 @@ interaction, and causal mediation}.
 
 \subsubsection{Ethics}\label{ethics}
 
-\{\textbf{authors blinded}\}
+(*blinded)
 
 \subsubsection{Data Availability}\label{data-availability}
 
-\{\textbf{authors blinded}\}
+(*blinded)
 
 \subsubsection{Acknowledgements}\label{acknowledgements}
 
-\{\textbf{authors blinded}\}
+(*blinded)
 
 \subsubsection{Author Statement}\label{author-statement}
 
-\{\textbf{authors blinded}\}
+(*blinded)
 
 \newpage{}
 
@@ -2380,10 +2355,10 @@ Attendance}\label{religious-service-attendance}
 
 If participants answered \emph{yes} to ``Do you identify with a religion
 and/or spiritual group?'' we measured their frequency of church
-attendence using one item from Sibley and Bulbulia
-(\citeproc{ref-sibley2012}{2012}): ``how many times did you attend a
-church or place of worship in the last month?''. Those participants who
-were not religious were imputed a score of ``0''.
+attendence using one item from Sibley (\citeproc{ref-sibley2012}{2012}):
+``how many times did you attend a church or place of worship in the last
+month?''. Those participants who were not religious were imputed a score
+of ``0''.
 
 \paragraph{Rural/Urban Codes}\label{ruralurban-codes}
 
@@ -2945,16 +2920,17 @@ Long-term causal effects of far-right terrorism in {N}ew {Z}ealand.
 \emph{PNAS Nexus}, \textbf{2}(8), pgad242.
 
 \bibitem[\citeproctext]{ref-Bulbulia_2015}
-Bulbulia, JA, Shaver, JH, Greaves, L, Sosis, R, and Sibley, CG (2015)
+Bulbulia, JA, Shaver, JH, Greaves, L, Sosis, R, and Sibley, CG \& (2015)
 Religion and parental cooperation: An empirical test of slone's sexual
 signaling model. In S. J. D. amd Van Slyke J., ed., \emph{The attraction
 of religion: A sexual selectionist account}, Bloomsbury Press, 29--62.
 
 \bibitem[\citeproctext]{ref-campbell2004}
 Campbell, WK, Bonacci, AM, Shelton, J, Exline, JJ, and Bushman, BJ
-(2004) Psychological entitlement: Interpersonal consequences and
+(2004) Psychological entitlement: interpersonal consequences and
 validation of a self-report measure. \emph{Journal of Personality
 Assessment}, \textbf{83}(1), 29--45.
+doi:\href{https://doi.org/10.1207/s15327752jpa8301_04}{10.1207/s15327752jpa8301\_04}.
 
 \bibitem[\citeproctext]{ref-chatton2020}
 Chatton, A, Le Borgne, F, Leyrat, C, \ldots{} Foucher, Y (2020)
@@ -3054,7 +3030,7 @@ applications is unnecessary. \emph{JAMA}, \textbf{331}(4), 285--286.
 Hernán, MA, Sauer, BC, Hernández-Díaz, S, Platt, R, and Shrier, I (2016)
 Specifying a target trial prevents immortal time bias and other
 self-inflicted injuries in observational analyses. \emph{Journal of
-Clinical Epidemiology}, \textbf{79}, 70--75.
+Clinical Epidemiology}, \textbf{79}, 7075.
 
 \bibitem[\citeproctext]{ref-hoffman2023}
 Hoffman, KL, Salazar-Barreto, D, Rudolph, KE, and Díaz, I (2023)
@@ -3087,12 +3063,11 @@ Mission Research}, \textbf{46}(2), 272--275.
 \bibitem[\citeproctext]{ref-johnson2005}
 Johnson, DD (2005) God{'}s punishment and public goods: A test of the
 supernatural punishment hypothesis in 186 world cultures. \emph{Human
-Nature}, \textbf{16}, 410--446.
+Nature}, \textbf{16}, 410446.
 
 \bibitem[\citeproctext]{ref-johnson2015}
 Johnson, DD (2015) Big gods, small wonder: Supernatural punishment
-strikes back. \emph{Religion, Brain \& Behavior}, \textbf{5}(4),
-290--298.
+strikes back. \emph{Religion, Brain \& Behavior}, \textbf{5}(4), 290298.
 
 \bibitem[\citeproctext]{ref-jost_end_2006-1}
 Jost, JT (2006) The end of the end of ideology. \emph{American
@@ -3253,7 +3228,7 @@ worker survivor effect. \emph{Mathematical Modelling}, \textbf{7}(9-12),
 \bibitem[\citeproctext]{ref-robins1992}
 Robins, JM, and Greenland, S (1992) Identifiability and exchangeability
 for direct and indirect effects. \emph{Epidemiology}, \textbf{3}(2),
-143--155.
+143155.
 
 \bibitem[\citeproctext]{ref-robins2010alternative}
 Robins, JM, and Richardson, TS (2010) Alternative graphical causal
@@ -3300,9 +3275,9 @@ hierarchy of interventions. \emph{Annals of Statistics}, \textbf{44}(6),
 2433.
 
 \bibitem[\citeproctext]{ref-sibley2012}
-Sibley, C. G., and Bulbulia, JA (2012) Healing those who need healing:
-How religious practice affects social belonging. \emph{Journal for the
-Cognitive Science of Religion}, \textbf{1}, 29--45.
+Sibley, \&B, C. G. (2012) Healing those who need healing: How religious
+practice affects social belonging. \emph{Journal for the Cognitive
+Science of Religion}, \textbf{1}, 29--45.
 
 \bibitem[\citeproctext]{ref-sibley2021}
 Sibley, CG (2021)
@@ -3377,7 +3352,7 @@ VanderWeele, TJ (2017) Causal effects of religious service attendance?
 
 \bibitem[\citeproctext]{ref-vanderweele2019}
 VanderWeele, TJ (2019) Principles of confounder selection.
-\emph{European Journal of Epidemiology}, \textbf{34}(3), 211--219.
+\emph{European Journal of Epidemiology}, \textbf{34}(3), 211219.
 
 \bibitem[\citeproctext]{ref-vanderweele2021can}
 VanderWeele, TJ (2021a) Can sophisticated study designs with regression
@@ -3399,7 +3374,7 @@ doi:\href{https://doi.org/10.7326/M16-2607}{10.7326/M16-2607}.
 \bibitem[\citeproctext]{ref-vanderweele2013}
 VanderWeele, TJ, and Hernan, MA (2013) Causal inference under multiple
 versions of treatment. \emph{Journal of Causal Inference},
-\textbf{1}(1), 1--20.
+\textbf{1}(1), 120.
 
 \bibitem[\citeproctext]{ref-vanderweele2012MEASUREMENT}
 VanderWeele, TJ, and Hernán, MA (2012) Results on differential and
@@ -3438,7 +3413,7 @@ doi:\href{https://doi.org/10.1093/aje/kwp436}{10.1093/aje/kwp436}.
 \bibitem[\citeproctext]{ref-westreich2013}
 Westreich, D, and Greenland, S (2013) The table 2 fallacy: Presenting
 and interpreting confounder and modifier coefficients. \emph{American
-Journal of Epidemiology}, \textbf{177}(4), 292--298.
+Journal of Epidemiology}, \textbf{177}(4), 292298.
 
 \bibitem[\citeproctext]{ref-wheatley1971}
 Wheatley, P (1971) \emph{The pivot of the four quarters : A preliminary
@@ -3447,10 +3422,10 @@ Edinburgh University Press. Retrieved from
 \url{https://cir.nii.ac.jp/crid/1130000795717727104}
 
 \bibitem[\citeproctext]{ref-whitehouse2023}
-Whitehouse, H, Francois, P, Savage, PE, \ldots{} Turchin, P (2023)
+Whitehouse, H, François, P, Savage, PE, \ldots{} Haar, B ter (2023)
 Testing the big gods hypothesis with global historical data: A review
-and retake. \emph{Religion, Brain \& Behavior}, \textbf{13}(2),
-124--166.
+and {``}retake{''}. \emph{Religion, Brain \& Behavior}, \textbf{13}(2),
+124166.
 
 \bibitem[\citeproctext]{ref-williams2021}
 Williams, NT, and Díaz, I (2021) \emph{{l}mtp: Non-parametric causal
