update church paper

--- a/manuscripts/24-lmtp-coop-church/title.tex
+++ b/manuscripts/24-lmtp-coop-church/title.tex
@@ -15,7 +15,7 @@ $for(by-author)$
       \affil{%
         $if(by-author.affiliations.name)$
      \small{     $by-author.affiliations.name$
-          ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~$by-author.orcid$ }
+          ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} $by-author.orcid$ }
         $endif$
       }
     $endfor$
